created a jupyter notebook

--- a/survival-analysis-reproduce.ipynb
+++ b/survival-analysis-reproduce.ipynb
@@ -6,6 +6,25 @@
    "source": [
     "# Reproduction of Tutorial Example using Lifelines Library"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## General Steps to Conduct Survival Analysis\n",
+    "1. Load and preprocess the data\n",
+    "2. Estimate the survival function using Kaplan-Meier estimator\n",
+    "3. Plot the survival curve\n",
+    "4. Perform statistical comparisons using log-rank test (if applicable) \n",
+    "5. Fit various parametric survival models (e.g., Weibull, Exponential, Log-Normal, Log-Logistic, etc.)\n",
+    "6. Compare the models to select the best model\n",
+    "7. Fit Cox's proportional hazard model\n",
+    "8.  Check the proportional hazard assumption\n",
+    "9.  Predict survival function for new data\n",
+    "10. Evaluate the model predictive performance\n",
+    "11. Interpret the results\n",
+    "12. Conclusion"
+   ]
   }
  ],
  "metadata": {
